<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asv_perception</name>
  <version>0.1.0</version>
  <description>
    Coastal hazard detection and autonomous patrol for ASVs using
    LiDAR + camera fusion on the VRX/WAM-V platform.
    Built for NexusHacks 2026 — HarborWatch project.
  </description>
  <maintainer email="shubhambarge.dev@gmail.com">shubham</maintainer>
  <license>MIT</license>

  <!-- Core ROS 2 -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Perception -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- TF -->
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
